<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_small">

        <TextView
            android:id="@+id/text_wc_title"
            style="@style/TextRegular16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wallet_connect_sign"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_wc_to_address_title"
            style="@style/TextRegular16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_small"
            android:text="@string/wallet_connect_to_address"
            android:textColor="@color/colorBlack"
            app:layout_constraintTop_toBottomOf="@id/text_wc_title" />

        <TextView
            android:id="@+id/text_wc_to_address"
            style="@style/TextRegular12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_wc_to_address_title"
            tools:text="Wallet connect to address" />

        <TextView
            android:id="@+id/text_wc_amount_title"
            style="@style/TextRegular16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_small"
            android:text="@string/wallet_connect_send_amount"
            android:textColor="@color/colorBlack"
            app:layout_constraintTop_toBottomOf="@id/text_wc_to_address" />

        <TextView
            android:id="@+id/text_wc_amount"
            style="@style/TextRegular12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_wc_amount_title"
            tools:text="Wallet connect amount" />

        <TextView
            android:id="@+id/text_wc_gas_title"
            style="@style/TextRegular16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_small"
            android:text="@string/wallet_connect_gas"
            android:textColor="@color/colorBlack"
            app:layout_constraintTop_toBottomOf="@id/text_wc_amount" />

        <TextView
            android:id="@+id/text_wc_gas"
            style="@style/TextRegular12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_wc_gas_title"
            tools:text="Wallet connect gas" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_small"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/text_wc_gas">

            <Button
                android:id="@+id/btn_cancel"
                style="@style/PrimaryButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/size_small"
                android:layout_weight="1"
                android:text="@string/btn_cancel" />

            <Button
                android:id="@+id/btn_sign"
                style="@style/PrimaryButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_sign" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>