<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.suki.wallet.app.walletAbstract.WalletViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_wallet"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_marginHorizontal="@dimen/size_small"
            android:layout_height="wrap_content"
            android:hint="@string/send_address_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_scan"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                style="@style/EntryBoxTextAppearance" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/btn_scan"
            android:layout_width="48dp"
            android:layout_height="48dp"
            style="@style/SecondaryButton"
            android:src="@drawable/ic_camera"
            android:layout_marginEnd="@dimen/size_small"
            app:layout_constraintTop_toTopOf="@id/input_wallet"
            app:layout_constraintBottom_toBottomOf="@id/input_wallet"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_amount"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/size_small"
            android:layout_marginHorizontal="@dimen/size_small"
            android:layout_height="wrap_content"
            android:hint="@string/amount_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_wallet" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                style="@style/EntryBoxTextAppearance" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_gas_estimated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/input_amount"
            android:layout_marginHorizontal="@dimen/size_small"
            android:text="@string/estimated_gas"
            android:layout_marginTop="@dimen/size_small"/>

        <Button
            android:id="@+id/btn_send"
            style="@style/PrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_small"
            android:layout_marginTop="@dimen/size_small"
            android:text="@string/send"
            app:layout_constraintTop_toBottomOf="@id/text_gas_estimated" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>